feat: 新增广告过滤功能