@@ -159,6 +159,7 @@ run {
     jvmArgs = [
             '--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls',
             '--add-opens=org.controlsfx.controls/org.controlsfx.control=io.knifer.freebox',
+            '--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls'
     ]
 }
 
